[gd_scene load_steps=2 format=3 uid="uid://ce2q7njhnunmf"]

[ext_resource type="Script" uid="uid://dgj5hes7832a4" path="res://Scripts/MarketSteam.gd" id="1_ijf6o"]

[node name="MarketSteam" type="Node2D"]
script = ExtResource("1_ijf6o")
metadata/_edit_lock_ = true

[node name="Tutorial" type="Label" parent="."]
offset_left = 26.0
offset_top = 13.0
offset_right = 294.0
offset_bottom = 36.0
scale = Vector2(2, 2)
text = "Enter: screenshoot - Escape: volver"
metadata/_edit_lock_ = true

[node name="Btn1" type="Button" parent="."]
offset_left = 96.0
offset_top = 83.0
offset_right = 268.0
offset_bottom = 117.0
text = "CapsHeader"
metadata/_edit_lock_ = true

[node name="Btn2" type="Button" parent="."]
offset_left = 92.0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 162.0
text = "CapsSmall"
metadata/_edit_lock_ = true

[node name="Btn3" type="Button" parent="."]
offset_left = 92.0
offset_top = 173.0
offset_right = 264.0
offset_bottom = 207.0
text = "CapsMain"
metadata/_edit_lock_ = true

[node name="Btn4" type="Button" parent="."]
offset_left = 96.0
offset_top = 219.0
offset_right = 268.0
offset_bottom = 253.0
text = "CapsVerti"
metadata/_edit_lock_ = true

[node name="Btn5" type="Button" parent="."]
offset_left = 97.0
offset_top = 265.0
offset_right = 269.0
offset_bottom = 299.0
text = "Background"
metadata/_edit_lock_ = true

[node name="Btn6" type="Button" parent="."]
offset_left = 296.0
offset_top = 80.0
offset_right = 468.0
offset_bottom = 114.0
text = "BiblioCaps"
metadata/_edit_lock_ = true

[node name="Btn7" type="Button" parent="."]
offset_left = 296.0
offset_top = 127.0
offset_right = 468.0
offset_bottom = 161.0
text = "BiblioHeader"
metadata/_edit_lock_ = true

[node name="Btn8" type="Button" parent="."]
offset_left = 295.0
offset_top = 175.0
offset_right = 467.0
offset_bottom = 209.0
text = "BiblioHero"
metadata/_edit_lock_ = true

[node name="Btn9" type="Button" parent="."]
offset_left = 292.0
offset_top = 225.0
offset_right = 464.0
offset_bottom = 259.0
text = "PreTrailer"
metadata/_edit_lock_ = true

[node name="Btn10" type="Button" parent="."]
offset_left = 292.0
offset_top = 269.0
offset_right = 464.0
offset_bottom = 303.0
text = "TwitchLados"
metadata/_edit_lock_ = true

[connection signal="pressed" from="Btn1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="Btn2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="Btn3" to="." method="_on_btn_3_pressed"]
[connection signal="pressed" from="Btn4" to="." method="_on_btn_4_pressed"]
[connection signal="pressed" from="Btn5" to="." method="_on_btn_5_pressed"]
[connection signal="pressed" from="Btn6" to="." method="_on_btn_6_pressed"]
[connection signal="pressed" from="Btn7" to="." method="_on_btn_7_pressed"]
[connection signal="pressed" from="Btn8" to="." method="_on_btn_8_pressed"]
[connection signal="pressed" from="Btn9" to="." method="_on_btn_9_pressed"]
[connection signal="pressed" from="Btn10" to="." method="_on_btn_10_pressed"]
